# Postscript_Interpreter

./: .gitignore  CMakeLists.txt  README.md
include/: interpreter.h  operations.h  value.h
src/: interpreter.cpp  main.cpp  operations.cpp  psdict.cpp  value.cpp
tests/: test.cpp  testArithmetic.cpp  testBooleanAndBitwise.cpp  testDictionary.cpp  testFlowControl.cpp  testInputOutput.cpp  testParse.cpp  testStackManipulation.cpp  testStrings.cpp
